# nous

./: .gitignore  .mcp.json  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  REUSE.toml  package-lock.json  package.json  project.clj  pyproject.toml  shadow-cljs.edn
.github/workflows/: ci.yml
cpp/libnous-link/: CMakeLists.txt
cpp/libnous-rt/: CMakeLists.txt
cpp/libnous-rt/include/nous/: link_bridge.h  scheduler.h  temporal.h
cpp/libnous-rt/src/: clock.cpp  scheduler.cpp
cpp/nous-audio/: CMakeLists.txt
cpp/nous-audio/src/: main.cpp
cpp/nous-sidecar/: CMakeLists.txt
doc/: attribution.md  design-bwosc.md  design-central-requirement.md  design-ctrl-authority.md  design-ctrl-foundation.md  design-decisions-open.md  design-device-model.md  design-log-transformations.md  design-studio-orchestration.md  design-transactional-ctrl.md  design-tx-log-durability.md  exemplar-beatstep-pro.md  exemplar-keystep-pro.md  exemplar-labyrinth.md  licensing.md  midi-device-research.md  test-backlog.md  test-data-policy.md  topology-example.edn  user-manual.md
doc/archive/: design-distributed-embedded.md  design-ensemble-improvisation.md  design-memory-field.md  design-note-transformers.md  design-spatial-field.md  design-spectral-resynthesizer.md  design-sprint-1-summary.md  design-sprint-2-summary.md  design-sprint-3-summary.md  design-sprint-4-summary.md  design-sprint-5-summary.md  design-temporal-buffer.md  (+10 more)
examples/: chaos_demo.clj  getting_started.clj  klank_demo.clj  ks_string_demo.clj  ndlr_fractal.clj  ndlr_hybrid.clj  ndlr_stochastic.clj  rosetta_stone.clj  superkar_demo.clj  waveshaper_demo.clj
script/: m21_extract.py  m21_server.py  sc-headless.scd
sessions/: mcp-validation.clj  rubycon-core.clj
src/: explore-kosmische-handoff.md  handoff-websocket-ctrl.md
(+288 files in other folders)
